cluster-manifests/agc-httproute-nip-io-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-nip-io-route
  namespace: agc-test
  annotations:
    description: "Test nip.io hostname routing concept"
spec:
  parentRefs:
  - name: agc-feature-gateway
    namespace: agc-shared
  hostnames:
  - "test-concept.23.98.101.23.nip.io"  # Test hostname using nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-test
      port: 80
